@@ -1,3 +1,8 @@
+2010-06-15 Riccardo Mottola
+	
+	* NSProgressIndicator-test:
+	Added new test for the progress indicator
+	
 2010-04-14  Eric Wasylishen <ewasylishen@gmail.com>
 
 	* Controller.m: On MinGW, display a main window so GSTest
